--- a/basic-email-template/Basic-Template.css
+++ b/basic-email-template/Basic-Template.css
@@ -49,23 +49,6 @@ a[x-apple-data-detectors] {
 END OF IMPORTANT
 */
 
-.kbBLSm {
-    height: 100%;
-    position: absolute;
-    inset: 0px 425px 0px 0px;
-    background-color: rgb(48, 55, 66);
-    background-image: linear-gradient( 45deg, rgb(59, 68, 80) 25%, transparent 25%), linear-gradient( -45deg, rgb(59, 68, 80) 25%, transparent 25%), linear-gradient( 45deg, transparent 75%, rgb(59, 68, 80) 75%), linear-gradient( -45deg, transparent 75%, rgb(59, 68, 80) 75%);
-    background-size: 20px 20px;
-    background-position: 0px 0px, 0px 10px, 10px -10px, -10px 0px;
-    transition: right 0.3s ease 0s;
-    overflow: scroll;
-}
-
-.blockbuilder-preview {
-    padding: 20px 30px;
-    --pointer-events-dnd: auto;
-}
-
 s {
     text-decoration: line-through;
 }
@@ -382,7 +365,7 @@ ol li {
 }
 
 .es-wrapper-color {
-    background-color: #f6f6f6;
+    background-color: #0E1318;
 }
 
 .es-content-body {
